--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
 </head>
 
 <body>
+
+<form action="/form/submit" method="GET"> 
+  <input type="text" name="text" class="search" placeholder="Search here!">
+  <input type="submit" name="submit" class="submit" value="Search">
+</form>
+    <br>
+    <br>
     <header>
         <nav>
             <ul>
